Added in the grey highlight

--- a/music.html
+++ b/music.html
@@ -1,76 +1,56 @@
 <!DOCTYPE>
 <html>
-    <head>
-        <title>Music Album</title>
-        <!--Image of Album Cover-->
-    </head>
-    <body>
-          <div>
-              <img src="images/basketball.jpg"/>
-              </br>
-    <h1>Leon's Best Of 1988</h1>
-    <p>
-    <u>The Basketball Rockers</u>
-        <br/>
-    July 4th 2017
-    <br/>
-    <h2>Band Members and Producers</h2>
-    </br>
-    <ul style=list-style-type:disc>
-    <li>Leon Shaw - Lead Vocals/Guitar</li>
-    <li>Brian O'Halloran - Base</li>
-    <li>Jason Sullivan - Drums</li>
-    <li>Jason Shagnon - Backup Guitar</li>
-    <li>Leon Shaw, Brian O'Halloran</li>
-    </ul>
-    </p>
-  </div>
 
-        <!--Album title DONE
-        Band Name have it underlined ONLY HALF DONE NEED UNDERLINE
-        Release Date DONE
+<head>
+    <title>Music Album</title>
+</head>
 
-        Band Members and Producers
-
-        Bullet the items below
-        Member One - Instrument
-        Member Two - Instrument
-        Member Three - Instrument
-        Producer
-
-        Table here 
-        Name of Table below is Tracks DONE
-        Table Design below
-        Track #   Track Title   Track Length  DONE
-        1          Title 1             3:24 DONe
-        2          Title 2             2:54 DONE
-        3          Title 3             3:04 DONE -->
-       <table border="1" width="100%">
-           <caption>Tracks</caption>
-    <tr>
-        <th>Track #</th>
-        <th>Track Title</th>
-        <th>Track Length</th>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>The Dribble</td>
-        <td>3:23</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Get the Boards</td>
-        <td>2:45</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Play Defense</td>
-        <td>3:04</td>
-    </tr>
- </table>
+<body>
+    <div>
+        <img src="images/basketball.jpg" />
+        </br>
+        <h1>Leon's Best Of 1988</h1>
+        <p>
+            <u>The Basketball Rockers</u>
+            <br/> July 4th 2017
+            <br/>
+            <h2>Band Members and Producers</h2>
+            </br>
+            <ul style=list-style-type:disc>
+                <li>Leon Shaw - Lead Vocals/Guitar</li>
+                <li>Brian O'Halloran - Base</li>
+                <li>Jason Sullivan - Drums</li>
+                <li>Jason Shagnon - Backup Guitar</li>
+                <li>Leon Shaw, Brian O'Halloran</li>
+            </ul>
+        </p>
+    </div>
+    <table border="1" width="100%">
+        <caption>Tracks</caption>
+        <tr bgcolor="grey">
+            <th>Track #</th>
+            <th>Track Title</th>
+            <th>Track Length</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>The Dribble</td>
+            <td>3:23</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Get the Boards</td>
+            <td>2:45</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Play Defense</td>
+            <td>3:04</td>
+        </tr>
+    </table>
 
 
-    </body>
+</body>
 
-    
+
 </html>
