Updated with new CSS

--- a/home.html
+++ b/home.html
@@ -2,22 +2,19 @@
 <html>
     <head>
         <title>Home Page</title>
+        <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
-    <style>
-    .content {
-text-align:center;
-}
 </style>
     <body>
-        <center><h1>Big Belly Burgers</h1></center>
+        <h1>Big Belly Burgers</h1>
         <a href="home.html">Home</a>
         <a href="menu.html">Menu</a>
         <a href="contactus.html">Contact</a>
         
-        <div class="content">
-            <img src="images/restaurant.jpg" />
+        <div>
+            <p style="text-align: center"><img src="images/restaurant.jpg" /></p>
             </br>
-            <p>
+            <p style="text-align: center">
                 Restaurant Description<br>A Burger Place for EVERYONE!  Our menu has combinations<br> 
                 of many top quality ingredients balanced with all the right<br> 
                 spice in just the right proportions skillfully cooked by our master<br>
@@ -28,8 +25,8 @@ text-align:center;
             </p>
         </div>
         <footer>
-            <center><p>100 Rocket Dr., Rochester, NH, 03867</p></center>
-            <center><p>603-123-4567</p></center>
+            <p>100 Rocket Dr., Rochester, NH, 03867</p>
+            <p>603-123-4567</p>
         </footer>
     </body>
 </html>
