--- a/menu.html
+++ b/menu.html
@@ -2,76 +2,132 @@
 <html>
     <head>
         <title>Leon's Restaurant</title>
+        <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
-        <style>
-    .content {
-    text-align:center;
-}
-</style>
     <body>
-        <center><h1>Big Belly Burgers</h1></center>
+        <h1>Big Belly Burgers</h1>
         <a href="home.html">Home</a>
         <a href="menu.html">Menu</a>
-        <a href="contactus.html">Contact</a>
-        
-        <div class="content">
-            </br>
-            <blockquote>
-            Burgers and Fries<br>
+        <a href="contactus.html">Contact</a>  </br> </br>
+    
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+            <strong>Burgers and Fries</strong><br><br>
             An American Classic!<br>
             Your choice - with or without cheese<br>
             Pickel, onion, tomato, and lettuce<br>
             Served with our famous thick cut<br>
             french Fries<br>
             $7.95<br>
-            </blockquote>
-            <blockquote>
-               Hot Dog and Chips<br>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+               <strong>Hot Dog and Chips</strong><br><br>
                An Summer Classic!<br>
                Your choice - white or wheat bun<br>
                Relish, mustard, and <br>
                Served with our house-made Chips<br>
-               $7.95<br> 
-            </blockquote>
-            <blockquote>
-                Italian Sausage and Peppers<br>
+               $7.95<br>
+            </div>
+        </div>
+    </div>
+</div> 
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+                <strong>Italian Sausage and Peppers</strong><br><br>
                 An All-Time Favotire!!<br>
                 Your choice - mild or spicy<br>
                 Cole slaw<br>
                 Served with garlic mashers<br>
                 $10.95<br>
-            </blockquote>
-            <blockquote>
-                Tenderloin Sandwich and Chips<br>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+                <strong>Tenderloin Sandwich and Chips</strong><br><br>
                 Really Hits the Spot!<br>
                 Pain or Sesame Seed bun<br>
                 Pickle, onion, tomato, and lettuce<br>
                 Served with our house-made Chips<br>
                 $8.95<br>
-            </blockquote>
-            <blockquote>
-                House Salad<br>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+                <strong>House Salad</strong><br><br>
                 On the Lighter Side<br>
                 Your shoice - with or without cheese<br>
                 Iceberg lettuce, tomatoes, Peppers<br>
                 Thousand Island or Ranch Dressing<br>
                 Served with a dinner roll<br>
                 $6.95<br>
-            </blockquote>
-            <blockquote>
-                Brisket Sandwich Fries<br>
-                A taste of Texas!<br>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square">
+    <div class="content">
+        <div class="table">
+            <div class="table-cell">
+                <strong>Brisket Sandwich and Fries</strong><br><br>
+                A Taste of Texas!<br>
                 Smoked Brisket on thick-cut Texas<br>
                 Toast<br>
-                Cole slaw<br>
+                Cole Slaw<br>
                 Served with our famous thick-cut<br>
-                french flies<br>
-                $7.95<br>
-            </blockquote>
+                french fies<br>
+                $6.95<br>
+            </div>
         </div>
+    </div>
+</div>
+<style>
+.square {
+    float:left;
+    position: relative;
+    width: 30%;
+    padding-bottom : 15%; /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+    overflow:hidden;
+}
+
+.content {
+    position:absolute;
+    height:80%; /* = 100% - 2*10% padding */
+    width:90%; /* = 100% - 2*5% padding */
+    padding: 10% 5%;
+}
+.table{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
+}</style>  
         <footer>
-            <center><p>100 Rocket Dr., Rochester, NH, 03867</p></center>
-            <center><p>603-123-4567</p></center>
+            <p>100 Rocket Dr., Rochester, NH, 03867</p>
+            <p>603-123-4567</p>
         </footer>
     </body>
 </html>
