Add new CSS for backgroup

--- a/albumPage.html
+++ b/albumPage.html
@@ -7,15 +7,13 @@
 </head>
 
 <body>
-    <div>
-        <img src="images/basketball.jpg" />
+    <div class="image">
+        <!--<div class="image">
+
+     <a href=""><img src="images/01 (22).jpg" width="360" height="200" alt=""></a>-->
+
+        <a href=""><img src="images/basketball.jpg" width="360" height="400" alt=""></a>
         </br>
-        <style>
-        h1{
-                color: maroon;
-                margin-left: 260px;
-            } 
-        </style>
         <h1>Leon's Best Of 1988</h1>
         <p>
             <center><u>The Basketball Rockers</u></center>
