--- a/menu.html
+++ b/menu.html
@@ -60,7 +60,7 @@
                 <strong>Tenderloin Sandwich and Chips</strong><br><br>
                 Really Hits the Spot!<br>
                 Pain or Sesame Seed bun<br>
-                Pickle, onion, tomato, and lettuce<br>
+                Pickel, onion, tomato, and lettuce<br>
                 Served with our house-made Chips<br>
                 $8.95<br>
             </div>
