Added color and styles

--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <title>Leon's Restaurant</title>
+        <title>Big Belly Burgers - Contacts</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
     <body>
@@ -16,19 +16,19 @@
             }
             </style>
             <div>
-                <label id="FullNameLabel" for="FullName">Name:</label>
+                <b><label id="FullNameLabel" for="FullName">Name:</label></b>
                 <input id="FullName" name="FullName" type="text"  />
             </div>
             <div>
-                <label id="EmailLabel" for="Email">Email:</label>
+                <b><label id="EmailLabel" for="Email">Email:</label></b>
                 <input id="Email" name="Email" type="text"  />
             </div>
             <div>
-                <label id="PhoneLabel" for="Phone">Phone:</label>
+                <b><label id="PhoneLabel" for="Phone">Phone:</label></b>
                 <input id="Phone" name="Phone" type="text"  />
             </div>
             <div>
-            <label>Reason for Inquiry:</label>
+            <b><label>Reason for Inquiry:</label></b>
             <select>
                 <option value="catering">Catering</option>
                 <option value="privateparty">Private Part</option>
@@ -41,12 +41,12 @@
                 <textarea id="Message" name="Message"></textarea>
             </div>
             <div>
-                <label id="MessageLabel" for="Message">Have you been to the restaurant?</label>
+                <b><label id="MessageLabel" for="Message">Have you been to the restaurant?</label></b>
                 <input type="radio" name="answer" value="No" checked/>No
                 <input type="radio" name="answer" value="Yes"/>Yes<br/>
             </div>
             <div>
-            <label>Best days to contact you:</label>
+            <b><label>Best days to contact you:</label></b>
             <input type="checkbox" name="myChoices" value="Monday"/>M
             <input type="checkbox" name="myChoices" value="Tuesday"/>T
             <input type="checkbox" name="myChoices" value="Wednesday"/>W
