--- a/home.html
+++ b/home.html
@@ -1,10 +1,19 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <title>Home Page</title>
+        <title>Big Belly Burgers - Home Page</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
+<style>
+    h1 {
+    background-color: green;
+}
+
+div {
+    background-color: lightblue;
+}
 </style>
+
     <body>
         <h1>Big Belly Burgers</h1>
         <a href="home.html">Home</a>
