--- a/menu.html
+++ b/menu.html
@@ -1,10 +1,10 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <title>Leon's Restaurant</title>
+        <title>Big Belly Burgers - Menu</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
     </head>
-    <body>
+    <body bgcolor="#00ccff">
         <h1>Big Belly Burgers</h1>
         <a href="home.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -14,10 +14,10 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-            <strong>Burgers and Fries</strong><br><br>
+            <strong><font size="4">Burgers and Fries</font></strong><br><br>
             An American Classic!<br>
             Your choice - with or without cheese<br>
-            Pickel, onion, tomato, and lettuce<br>
+            Pickle, onion, tomato, and lettuce<br>
             Served with our famous thick cut<br>
             french Fries<br>
             $7.95<br>
@@ -29,7 +29,7 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-               <strong>Hot Dog and Chips</strong><br><br>
+               <strong><font size="4">Hot Dog and Chips</font></strong><br><br>
                An Summer Classic!<br>
                Your choice - white or wheat bun<br>
                Relish, mustard, and <br>
@@ -43,7 +43,7 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-                <strong>Italian Sausage and Peppers</strong><br><br>
+                <strong><font size="4">Italian Sausage and Peppers</font></strong><br><br>
                 An All-Time Favotire!!<br>
                 Your choice - mild or spicy<br>
                 Cole slaw<br>
@@ -57,10 +57,10 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-                <strong>Tenderloin Sandwich and Chips</strong><br><br>
+                <strong><font size="4">Tenderloin Sandwich and Chips</font></strong><br><br>
                 Really Hits the Spot!<br>
                 Pain or Sesame Seed bun<br>
-                Pickel, onion, tomato, and lettuce<br>
+                Pickle, onion, tomato, and lettuce<br>
                 Served with our house-made Chips<br>
                 $8.95<br>
             </div>
@@ -71,7 +71,7 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-                <strong>House Salad</strong><br><br>
+                <strong><font size="4">House Salad</font></strong><br><br>
                 On the Lighter Side<br>
                 Your shoice - with or without cheese<br>
                 Iceberg lettuce, tomatoes, Peppers<br>
@@ -86,10 +86,9 @@
     <div class="content">
         <div class="table">
             <div class="table-cell">
-                <strong>Brisket Sandwich and Fries</strong><br><br>
+                <strong><font size="4">Brisket Sandwich and Fries</font></strong><br><br>
                 A Taste of Texas!<br>
-                Smoked Brisket on thick-cut Texas<br>
-                Toast<br>
+                Smoked Brisket on thick-cut Texas Toast<br>
                 Cole Slaw<br>
                 Served with our famous thick-cut<br>
                 french fies<br>
