Added beverages and CSS work

--- a/menu.html
+++ b/menu.html
@@ -123,7 +123,28 @@
     vertical-align:middle;
     height:100%;
     width:100%;
-}</style>  
+}</style> 
+ 
+    <table>
+  <tr>
+    <th><u>Beverages</u></th>
+  </tr>
+  <tr>
+    <td>Root Beer</td>
+    <td>$3.00</td>
+    </tr>
+<tr>
+    <td>Bottled Water</td>
+    <td>$1.25</td>
+  </tr>
+  <tr>
+    <td>Lemonade</td>
+    <td>$1.00</td>
+    </tr>
+    <tr>
+    <td>Iced Tea</td>
+    <td>$1.25</td>
+  </tr><br>
         <footer>
             <p>100 Rocket Dr., Rochester, NH, 03867</p>
             <p>603-123-4567</p>
