add bootstrap first pass

--- a/contactus.html
+++ b/contactus.html
@@ -3,18 +3,31 @@
     <head>
         <title>Big Belly Burgers - Contacts</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+  <script src="bootstrap/docs/assets/js/vendor/jquery.min.js"></script>
+  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     </head>
     <body>
         <h1>Big Belly Burgerst</h1>
-        <a href="home.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contactus.html">Contact</a>
+                        <div class="test">
+	<ul class="nav nav-tabs">
+        <li class="active"><a href="home.html"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li class="active"><a href="menu.html"><span class="glyphicon glyphicon-menu"></span>  Menu</a></li>
+        <li class="active"><a href="contactus.html"><span class="glyphicon glyphicon-contact"></span>  Contact</a></li>
+</ul>
+       <!--<button><a href="home.html">Home</a></button>
+        <button><a href="menu.html">Menu</a></button>
+        <button><a href="contactus.html">Contact</a></button>-->
         <form action="#" method="post">
             <style>
             div{
-                margin-left: 500px;
+                margin-left: 1px;
             }
             </style>
+            <br><br>
             <div>
                 <b><label id="FullNameLabel" for="FullName">Name:</label></b>
                 <input id="FullName" name="FullName" type="text"  />
