--- a/home.html
+++ b/home.html
@@ -3,6 +3,12 @@
     <head>
         <title>Big Belly Burgers - Home Page</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+  <script src="bootstrap/docs/assets/js/vendor/jquery.min.js"></script>
+  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
     </head>
 <style>
     h1 {
@@ -16,10 +22,17 @@ div {
 
     <body>
         <h1>Big Belly Burgers</h1>
-        <a href="home.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contactus.html">Contact</a>
-        
+    <div class="test">
+    <div class="jumbotron">
+    <h2>New Menu</h2>      
+    <p>Please look at pour revised menu.</p>
+  </div>
+	<ul class="nav nav-tabs">
+        <li class="active"><a href="home.html"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li class="active"><a href="menu.html"><span class="glyphicon glyphicon-menu"></span>  Menu</a></li>
+        <li class="active"><a href="contactus.html"><span class="glyphicon glyphicon-contact"></span>  Contact</a></li>
+
+        </div>
         <div>
             <p style="text-align: center"><img src="images/restaurant.jpg" /></p>
             </br>
