--- a/menu.html
+++ b/menu.html
@@ -3,128 +3,72 @@
     <head>
         <title>Big Belly Burgers - Menu</title>
         <link rel="stylesheet" type="text/css" href="restaurantStyles.css">
-    </head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+  <script src="bootstrap/docs/assets/js/vendor/jquery.min.js"></script>
+  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+
+</head>
     <body bgcolor="#00ccff">
         <h1>Big Belly Burgers</h1>
-        <a href="home.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contactus.html">Contact</a>  </br> </br>
-    
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-            <strong><font size="4">Burgers and Fries</font></strong><br><br>
+                 <div class="test">
+	<ul class="nav nav-tabs">
+        <li class="active"><a href="home.html"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
+        <li class="active"><a href="menu.html"><span class="glyphicon glyphicon-menu"></span>  Menu</a></li>
+        <li class="active"><a href="contactus.html"><span class="glyphicon glyphicon-contact"></span>  Contact</a></li>
+
+    </ul>
+     </div>
+<div class="row">
+    <div class="col-sm-4" style="background-color:lavender;">            
+        <strong><font size="4">Burgers and Fries</font></strong><br><br>
             An American Classic!<br>
             Your choice - with or without cheese<br>
             Pickle, onion, tomato, and lettuce<br>
             Served with our famous thick cut<br>
             french Fries<br>
-            $7.95<br>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-               <strong><font size="4">Hot Dog and Chips</font></strong><br><br>
+            $7.95<br></div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">               
+        <strong><font size="4">Hot Dog and Chips</font></strong><br><br>
                An Summer Classic!<br>
                Your choice - white or wheat bun<br>
                Relish, mustard, and <br>
                Served with our house-made Chips<br>
-               $7.95<br>
-            </div>
-        </div>
-    </div>
-</div> 
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <strong><font size="4">Italian Sausage and Peppers</font></strong><br><br>
+               $7.95<br></div>
+    <div class="col-sm-4" style="background-color:lavender;">               
+        <strong><font size="4">Italian Sausage and Peppers</font></strong><br><br>
                 An All-Time Favotire!!<br>
                 Your choice - mild or spicy<br>
                 Cole slaw<br>
                 Served with garlic mashers<br>
-                $10.95<br>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <strong><font size="4">Tenderloin Sandwich and Chips</font></strong><br><br>
+                $10.95<br></div>
+  </div><br>
+      <div class="col-sm-4" style="background-color:lavender;">                
+          <strong><font size="4">Tenderloin Sandwich and Chips</font></strong><br><br>
                 Really Hits the Spot!<br>
                 Pain or Sesame Seed bun<br>
                 Pickle, onion, tomato, and lettuce<br>
                 Served with our house-made Chips<br>
-                $8.95<br>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <strong><font size="4">House Salad</font></strong><br><br>
+                $8.95<br></div>
+    <div class="col-sm-4" style="background-color:lavenderblush;">                
+        <strong><font size="4">House Salad</font></strong><br><br>
                 On the Lighter Side<br>
                 Your shoice - with or without cheese<br>
                 Iceberg lettuce, tomatoes, Peppers<br>
                 Thousand Island or Ranch Dressing<br>
                 Served with a dinner roll<br>
-                $6.95<br>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <strong><font size="4">Brisket Sandwich and Fries</font></strong><br><br>
+                $6.95<br></div>
+    <div class="col-sm-4" style="background-color:lavender;">               
+        <strong><font size="4">Brisket Sandwich and Fries</font></strong><br><br>
                 A Taste of Texas!<br>
                 Smoked Brisket on thick-cut Texas Toast<br>
                 Cole Slaw<br>
                 Served with our famous thick-cut<br>
                 french fies<br>
-                $6.95<br>
-            </div>
-        </div>
-    </div>
-</div>
-<style>
-.square {
-    float:left;
-    position: relative;
-    width: 30%;
-    padding-bottom : 15%; /* = width for a 1:1 aspect ratio */
-    margin:1.66%;
-    overflow:hidden;
-}
+                $6.95<br></div>
 
-.content {
-    position:absolute;
-    height:80%; /* = 100% - 2*10% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 10% 5%;
-}
-.table{
-    display:table;
-    height:100%;
-    width:100%;
-}
-.table-cell{
-    display:table-cell;
-    vertical-align:middle;
-    height:100%;
-    width:100%;
-}</style> 
- 
     <table>
   <tr>
     <th><u>Beverages</u></th>
@@ -145,9 +89,5 @@
     <td>Iced Tea</td>
     <td>$1.25</td>
   </tr><br>
-        <footer>
-            <p>100 Rocket Dr., Rochester, NH, 03867</p>
-            <p>603-123-4567</p>
-        </footer>
-    </body>
-</html>
+</body>
+</html> 
