added secong bootstrap and carousel

--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,7 @@
                 Served with our famous thick-cut<br>
                 french fies<br>
                 $6.95<br></div>
-
+<div>
     <table>
   <tr>
     <th><u>Beverages</u></th>
@@ -89,5 +89,11 @@
     <td>Iced Tea</td>
     <td>$1.25</td>
   </tr><br>
+  </table>
+  </div>
+          <footer>
+            <p>100 Rocket Dr., Rochester, NH, 03867</p>
+            <p>603-123-4567</p>
+        </footer>
 </body>
 </html> 
