--- a/home.html
+++ b/home.html
@@ -34,6 +34,47 @@ div {
 
         </div>
         <div>
+            <div class="container">
+  <h2>Big Belly Burgers Carousel</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="images/newlocation.jpg" alt="New Location"  style="width: 400px; margin: 0 auto">
+      </div>
+
+      <div class="item">
+        <img src="images/seasonmenu.jpg" alt="Seasonal Menu" style="width: 400px; margin: 0 auto">
+      </div>
+    
+      <div class="item">
+        <img src="images/drinkofmonth.jpg" alt="Dronk of the Month" style="width: 400px; margin: 0 auto">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<noscript>
+    <div class="error message">
+        We're sorry but our site <strong>requires</strong> JavaScript.
+    </div>    
+</noscript>
             <p style="text-align: center"><img src="images/restaurant.jpg" /></p>
             </br>
             <p style="text-align: center">
@@ -45,6 +86,7 @@ div {
                 own oven door to pull the first one out way back in <br>1902. 
                 Tradition does mean a lot when talking about the Big Belly Burgers.
             </p>
+            
         </div>
         <footer>
             <p>100 Rocket Dr., Rochester, NH, 03867</p>
